# OCT2024-Poetry-demo

./: .pre-commit-config.yaml  README.md
.github/workflows/: main.yml  release.yml
src/: Dockerfile  README.md  pyproject.toml  requirements.txt
src/timer_demo/: __main__.py
