[tool.poetry]
name = "timer-demo"
version = "0.0.1"
description = "A demo package for Python User Group, 22 Oct 2024"
authors = ["wyhwong <wyhwong@link.cuhk.edu.hk>"]
maintainers = ["wyhwong <wyhwong@link.cuhk.edu.hk>"]
homepage = "https://github.com/wyhwong/20241022-pyusergroup"
repository = "https://github.com/wyhwong/20241022-pyusergroup"
license = "MIT"
readme = "README.md"
keywords = ["python"]
classifiers=[
    "Development Status :: 1 - Planning",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]

[tool.poetry.dependencies]
python = "^3.11,<3.12"
tqdm = "^4.66.1"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
isort = "^5.13.2"
pre-commit = "^3.6.0"

[tool.black]
line-length = 120

[tool.isort]
line_length = 120
include_trailing_comma = true
lines_after_imports = 2

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
